# rust_terminal

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ansi_escaper.rs  main.rs  renderer.rs  term.rs  text_area.rs  tty.rs
test/: 256col.sh
