[package]
name = "rust_terminal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"
libc = "*"
font-kit = "0.11.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf"]

[dependencies.rust_ansi]
default-features = true
git = "https://github.com/Irchh/rust_ansi"
rev = "eaa244ba"
